package flight.reservation.flight.observer;

public enum ScheduleEventType {
    FLIGHT_SCHEDULED,
    FLIGHT_REMOVED,
    PRICE_UPDATED
}
