package flight.reservation.flight.observer;

public interface ScheduleObserver {

    void onScheduleEvent(ScheduleEvent event);
}
